[gd_scene load_steps=9 format=3 uid="uid://bkt525k4370dx"]

[ext_resource type="PackedScene" uid="uid://pe2ox3jl24m" path="res://Tile Maps/map_biblioteca.tscn" id="1_6poiy"]
[ext_resource type="Script" path="res://Worlds/door.gd" id="4_21qbn"]
[ext_resource type="Texture2D" uid="uid://b7yeeadks2d2s" path="res://assets/biblioteca/Fantasy Interior Tiles/Full.png" id="5_rjnsu"]
[ext_resource type="PackedScene" uid="uid://cvar6d8rfgrd2" path="res://Player/player.tscn" id="6_cx6rc"]
[ext_resource type="PackedScene" uid="uid://bqctp7mykqxgj" path="res://Worlds/transicao/pathway.tscn" id="7_7ylex"]
[ext_resource type="Script" path="res://Worlds/marker_2d.gd" id="8_rdpnd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t3v3g"]
size = Vector2(23, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7c6ii"]
size = Vector2(20, 25)

[node name="Biblioteca" type="Node2D"]

[node name="map_biblioteca" parent="." instance=ExtResource("1_6poiy")]

[node name="Door" type="Area2D" parent="."]
collision_mask = 3
script = ExtResource("4_21qbn")

[node name="Door_open" type="Sprite2D" parent="Door"]
position = Vector2(223, -13)
texture = ExtResource("5_rjnsu")
region_enabled = true
region_rect = Rect2(224, 0, 32, 35)

[node name="Door_closed" type="Sprite2D" parent="Door"]
position = Vector2(223, -15.5)
scale = Vector2(1, 1.02778)
texture = ExtResource("5_rjnsu")
region_enabled = true
region_rect = Rect2(194, -1, 28, 36)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(223.5, -11)
shape = SubResource("RectangleShape2D_t3v3g")

[node name="Door_blocker" type="StaticBody2D" parent="Door"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door/Door_blocker"]
position = Vector2(224, -16.5)
shape = SubResource("RectangleShape2D_7c6ii")
debug_color = Color(0, 0, 0, 0.42)

[node name="Player" parent="." instance=ExtResource("6_cx6rc")]
collision_layer = 50
collision_mask = 7

[node name="TestArea1" parent="." instance=ExtResource("7_7ylex")]
position = Vector2(186, -66)
collision_layer = 2
collision_mask = 2

[node name="TestArea1Pos" type="Marker2D" parent="."]
position = Vector2(222, 18)

[node name="key_spawner" type="Marker2D" parent="." groups=["key_spawner"]]
position = Vector2(357, 119)
gizmo_extents = 28.0
script = ExtResource("8_rdpnd")

[connection signal="body_entered" from="Door" to="Door" method="_on_body_entered"]
[connection signal="body_exited" from="Door" to="Door" method="_on_body_exited"]
